--- a/libs/logger/project.json
+++ b/libs/logger/project.json
@@ -5,5 +5,20 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project logger --web",
-  "targets": {}
+  "targets": {
+    "build-lib": {
+      "executor": "@nx/js:tsc",
+      "cache": true,
+      "options": {
+        "outputPath": "dist/{projectRoot}/",
+        "main": "{projectRoot}/src/index.ts",
+        "tsConfig": "{projectRoot}/tsconfig.lib.json",
+        "clean": false,
+        "assets": [
+          "{projectRoot}/*.md",
+          "{projectRoot}/**/*.{scss,sass,less,css,svg,bmp,gif,jpg,jpeg,png,avif,webp,eot,ttf,woff,woff2}"
+        ]
+      }
+    },
+  }
 }
